# MyTinyWebserver

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  HttpConn.cpp  HttpConn.h  README.md  Timer.cpp  Timer.h  Webserver.cpp  Webserver.h  main.cpp  makefile  server  server.sh
ConnPool/: ConnPool.cpp  ConnPool.h  MysqlConn.cpp  MysqlConn.h
HttpConn/: HttpConn.cpp  HttpConn.h
Logger/: Logger.cpp  Logger.h
ThreadPool/: ThreadPool.cpp  ThreadPool.h
Timer/: Timer.cpp  Timer.h
nginx/: nginx_conf.txt
root/: index.html  log.html  logError.html  register.html  registerError.html
